# Tourist-Managment-system

Harunov_projekat/: CMakeLists.txt  addpackage.cpp  addpackage.h  addpackage.ui  databaseheader.h  findpackage.cpp  findpackage.h  findpackage.ui  findtourist.cpp  findtourist.h  findtourist.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registertourist.cpp  registertourist.h  registertourist.ui
database/: MyTouristManager.db
